--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,6 @@
 <h2 id="title">Welcome to Ember.js</h2>
 
+{{#link-to "users"}}Users{{/link-to}}
+{{#link-to "playlists"}}Playlists{{/link-to}}
+{{#link-to "videos"}}Videos{{/link-to}}
 {{outlet}}
