--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -8,4 +8,8 @@
   <input type="submit" name="submit">
 </form>
 
-{{outlet}}
+{{log queryResponse}}
+{{queryResponse}}
+{{#each user in model}}
+  <li>{{user.title}}</li>
+{{/each}}
