--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -1,25 +1,1 @@
-<h2>This is the users template</h2>
-
-<form {{action 'search' on='submit'}}>
-  <div class="ui fluid icon input">
-    {{input value=searchTerm placeholder="Search for your favorite videos..."}}
-    <i class="search icon"></i>
-  </div>
-  <input type="submit" name="submit">
-</form>
-
-
-{{#each response in videos}}
-<div class="ui list">
-  <div class="item">
-    {{ember-youtube ytid=response.videoId}}
-    <!-- <img {{bind-attr src=response.url alt=imageTitle}}> -->
-    <div class="content">
-      <a class="header">{{response.title}}</a>
-      <div class="description">
-        {{response.description}}
-      </div>
-    </div>
-  </div>
-</div>
-{{/each}}
+<h2>This is the user's page</h2>
