--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -1,4 +1,4 @@
-<h2>this is the videos template</h2>
+<h2>Enjoy the following collection of YouTube videos</h2>
 
 <form {{action 'search' on='submit'}}>
   <div class="ui fluid icon input">
@@ -8,20 +8,20 @@
 </form>
 
 
-{{#each response in videos}}
-<div class="ui list">
-  <div class="item">
-    <img {{bind-attr src=response.url alt=imageTitle}}>
-    <div class="content">
-      <a class="header">{{response.title}}</a>
-      {{ember-youtube ytid=response.videoId}}
-
-      <div class="description">
-        {{response.description}}
+{{#each video in videos}}
+  <div class="ui list">
+    <div class="item">
+      <img {{bind-attr src=video.url alt="imageTitle"}}>
+      <div class="content">
+        <a class="header">{{video.title}}</a>
+        {{ember-youtube ytid=video.videoId}}
+        <i {{action "favorite" video}} {{bind-attr class=":heart :icon video.favorited:selected"}}></i>
+        <div class="description">
+          {{video.description}}
+        </div>
       </div>
     </div>
   </div>
-</div>
 {{/each}}
 
 {{outlet}}
