--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="ui button" type="submit">Login</div>
+  <div class="ui secondary button" type="submit">Login</div>
 </form>
 
 {{outlet}}
